# vmette

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md
.github/workflows/: desktop-image.yml  release.yml
crates/vmette/: Cargo.toml  README.md  build.rs  cbindgen.toml
crates/vmette-assets/src/: lib.rs
crates/vmette-cli/: Cargo.toml
crates/vmette-cli/src/: desktop.rs  main.rs
crates/vmette-daemon/: Cargo.toml
crates/vmette-daemon/src/: lib.rs  main.rs  registry.rs  rfb.rs  settle.rs  view.rs
crates/vmette-image/: Cargo.toml
crates/vmette-image/src/: lib.rs
crates/vmette-mcp/: Cargo.toml
crates/vmette-mcp/src/: daemon_client.rs  main.rs  sandbox.rs  server.rs  weburl.rs  workspace.rs
crates/vmette-proto/: Cargo.toml
crates/vmette-proto/src/: agent.rs  daemon.rs  geom.rs  lib.rs  mount.rs
crates/vmette-provider-oci/: Cargo.toml
crates/vmette-provider-oci/src/: lib.rs
crates/vmette-provider-tar/src/: lib.rs
crates/vmette-providers/: Cargo.toml
crates/vmette-providers/src/: lib.rs
crates/vmette/examples/: minimal.c  minimal.rs
crates/vmette/include/: vmette.h
crates/vmette/src/: desktop.rs  ffi.rs  lib.rs  lifecycle.rs
crates/vmette/src/vz/: vsock.rs
docs/: API.md  CLI.md  DAEMON.md  DESKTOP.md  HACKING.md  MCP.md  README.md
firecracker-spike/: Cargo.toml
firecracker-spike/src/: main.rs
guest/: vmette-desktop-agent.c
images/vmette-desktop/: Dockerfile  entrypoint.sh  vmette-open
libkrun-spike/: Cargo.toml  build.rs
libkrun-spike/src/: main.rs
lima/: firecracker.yaml
scripts/: build-desktop-image.sh  build-initramfs.sh  build-vsock-send.sh  custom-init.sh  export-macos-ca-certs.sh  fetch-alpine-rootfs.sh  fetch-assets.sh  fetch-vz-assets.sh  guest-arch.sh  install.sh  run-microvm.sh  run-vz.sh  run.sh
tests/: desktop.sh  rfb_probe.py  run.sh  view.sh
tests/fixtures/share/: README.md  from-host.txt
vz-spike/: entitlements.plist  main.m  vsock-runner.c  vsock-send.c
