[package]
name        = "vmette-cli"
description = "Command-line interface to vmette"
version     .workspace = true
edition     .workspace = true
license     .workspace = true
repository  .workspace = true

[[bin]]
name = "vmette"
path = "src/main.rs"

[dependencies]
vmette       = { path = "../vmette" }
vmette-image = { path = "../vmette-image" }
tokio        = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
