[package]
name        = "vmette-cli"
description = "Command-line interface to vmette"
version     .workspace = true
edition     .workspace = true
license     .workspace = true
repository  .workspace = true

[[bin]]
name = "vmette"
path = "src/main.rs"

[dependencies]
vmette            = { path = "../vmette" }
vmette-assets     = { path = "../vmette-assets" }
vmette-proto      = { path = "../vmette-proto" }
vmette-providers  = { path = "../vmette-providers" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# `vmette desktop` subcommands talk to vmetted over its UNIX socket, building
# requests / parsing replies as the shared vmette-proto wire types.
serde_json          = "1"
base64              = "0.22"
