[package]
name        = "vmette-mcp"
description = "Model Context Protocol server exposing vmette as a sandbox for AI agents"
version     .workspace = true
edition     .workspace = true
license     .workspace = true
repository  .workspace = true

[[bin]]
name = "vmette-mcp"
path = "src/main.rs"

[dependencies]
vmette-assets = { path = "../vmette-assets" }
vmette-proto  = { path = "../vmette-proto" }
rmcp      = { version = "1.7", features = ["server", "macros", "transport-io", "schemars"] }
schemars  = "1"
tokio     = { version = "1", features = ["full"] }
serde     = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow    = "1"
thiserror = "1"
tracing   = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid      = { version = "1", features = ["v4"] }
libc      = { workspace = true }
nix       = { workspace = true, features = ["fs", "process"] }
url       = "2"
