[package]
name        = "vmette-provider-oci"
description = "OCI/Docker image rootfs provider for vmette"
version     .workspace = true
edition     .workspace = true
rust-version.workspace = true
license     .workspace = true
repository  .workspace = true
keywords    = ["vmette", "oci", "docker", "rootfs", "container"]
categories  = ["virtualization", "filesystem"]
readme      = "README.md"

# Depends on vmette (macOS-only), so it can't build on the Linux host docs.rs
# uses by default — pin its build to the Apple targets.
[package.metadata.docs.rs]
default-target = "aarch64-apple-darwin"
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin"]

[dependencies]
vmette     = { workspace = true }
oci-client = { version = "0.17", default-features = false, features = ["rustls-tls"] }
oci-spec   = "0.9"
tokio      = { version = "1", features = ["fs", "io-util", "rt-multi-thread", "macros"] }
tar        = "0.4"
flate2     = "1"
zstd       = "0.13"
thiserror  = "1"
tracing    = "0.1"
serde_json = "1"
base64     = "0.22"
