[package]
name        = "vmette-providers"
description = "The default rootfs-provider registry for vmette (dir + squashfs + tar + OCI, in resolution order)"
version     .workspace = true
edition     .workspace = true
license     .workspace = true
repository  .workspace = true

[lib]
name = "vmette_providers"
path = "src/lib.rs"

[dependencies]
vmette                   = { path = "../vmette" }
vmette-provider-oci      = { path = "../vmette-provider-oci" }
vmette-provider-squashfs = { path = "../vmette-provider-squashfs" }
vmette-provider-tar      = { path = "../vmette-provider-tar" }
