[package]
name        = "vmette"
description = "Local Linux microVM sandbox for macOS, built on Apple's Virtualization.framework"
version     .workspace = true
edition     .workspace = true
license     .workspace = true
repository  .workspace = true

# `lib`       — usable as a normal Rust crate dependency (used by vmette-cli + tests)
# `cdylib`    — produces libvmette.dylib for non-Rust consumers
# `staticlib` — produces libvmette.a for static linking
[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
vmette-proto         = { path = "../vmette-proto" }
objc2                .workspace = true
objc2-core-foundation .workspace = true
objc2-foundation     .workspace = true
objc2-virtualization .workspace = true
block2               .workspace = true
dispatch2            .workspace = true
base64               .workspace = true
thiserror            .workspace = true
nix                  .workspace = true
libc                 .workspace = true
rand                 .workspace = true
serde                .workspace = true
serde_json           .workspace = true
tracing              = "0.1"

[build-dependencies]
cbindgen = "0.27"
