[package]
name        = "vmette"
description = "Run untrusted agents in a hardware-isolated Linux microVM on macOS — a security boundary built on Apple's Virtualization.framework"
version     .workspace = true
edition     .workspace = true
rust-version.workspace = true
license     .workspace = true
repository  .workspace = true
keywords    = ["macos", "virtualization", "microvm", "sandbox", "vm"]
categories  = ["virtualization", "os::macos-apis"]
readme      = "README.md"

# macOS-only (Apple's Virtualization.framework). docs.rs builds on Linux by
# default, where this crate can't compile — pin its build to the Apple targets.
[package.metadata.docs.rs]
default-target = "aarch64-apple-darwin"
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin"]

# `lib`       — usable as a normal Rust crate dependency (used by vmette-cli + tests)
# `cdylib`    — produces libvmette.dylib for non-Rust consumers
# `staticlib` — produces libvmette.a for static linking
[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
vmette-proto         = { workspace = true }
objc2                .workspace = true
objc2-core-foundation .workspace = true
objc2-foundation     .workspace = true
objc2-virtualization .workspace = true
block2               .workspace = true
dispatch2            .workspace = true
base64               .workspace = true
thiserror            .workspace = true
nix                  .workspace = true
libc                 .workspace = true
rand                 .workspace = true
serde                .workspace = true
serde_json           .workspace = true
tracing              = "0.1"

[features]
# Opt-in: regenerate the checked-in `include/vmette.h` from `src/ffi.rs` at
# build time (see build.rs). Off by default so consumers never compile cbindgen.
regenerate-header = ["dep:cbindgen"]

[build-dependencies]
cbindgen = { version = "0.27", optional = true }
